--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
 <header>
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+    class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">NewsBrowser</a>
+      <a class="navbar-brand text-white" [routerLink]="['/']">NewsBrowser</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -25,20 +25,20 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-white" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
+            <a class="nav-link text-white" [routerLink]="['/counter']"
               >Counter</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/simple-search']"
+            <a class="nav-link text-white" [routerLink]="['/simple-search']"
               >Simple search</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
+            <a class="nav-link text-white" [routerLink]="['/fetch-data']"
               >Fetch data</a
             >
           </li>
