--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
@@ -6,26 +6,42 @@
            placeholder="Search"
            [formControl]="searchQuery"/>
   </mat-form-field>
-  <button type="submit"S
-          mat-button
-          [disabled]="!searchForm.form.valid">
-    Szukaj
+  <button mat-raised-button color="primary">
+    Search
   </button>
 </form>
 
-<p *ngIf="!newses"><em>Loading...</em></p>
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="newses">
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="newses">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Text</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let news of newses">
-      <td>{{ news.title }}</td>
-      <td>{{ news.text }}</td>
-    </tr>
-  </tbody>
-</table>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="author">
+      <th mat-header-cell *matHeaderCellDef> Author </th>
+      <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="text">
+      <th mat-header-cell *matHeaderCellDef> Content </th>
+      <td mat-cell *matCellDef="let element"> {{element.text}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef> Tags </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-form-field class="chips-tags">
+          <mat-chip-list #chipList>
+            <mat-chip *ngFor="let tag of element.tags">
+              {{tag}}
+            </mat-chip>
+          </mat-chip-list>
+        </mat-form-field>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/news-details/', row.id]"></tr>
+  </table>
+</div>
