--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
@@ -6,7 +6,7 @@
   <mat-card-content>
     <mat-form-field class="tags">
       <mat-chip-list>
-        <mat-chip *ngFor="let tag of news.tags">
+        <mat-chip *ngFor="let tag of news.tags" [routerLink]="['/simple-search/', tag]">
           {{tag}}
         </mat-chip>
       </mat-chip-list>
@@ -18,4 +18,5 @@
       {{news.text}}
     </p>
   </mat-card-content>
+  <a href={{news.url}}>{{news.url}}</a>
 </mat-card>
