--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,22 +20,19 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-white" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-white" [routerLink]="['/simple-search']"
-              >Simple search</a
-            >
+            <a class="nav-link text-white" [routerLink]="['/advanced-search']">Advanced search</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-white" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-white" [routerLink]="['/simple-search']">Simple search</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-white" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
         </ul>
       </div>
