--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/advanced-search/advanced-search.component.css
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/advanced-search/advanced-search.component.css
@@ -2,8 +2,13 @@
   width: 100%;
 }
 
+#field-type-selection-width {
+  width: 10%;
+  margin-right: 10px;
+}
+
 #search-width {
-  width: 85%;
+  width: 75%;
 }
 
 .example-container {
