Added new search method (temporary name combination-search) (fuzzy search, synonyms search). Added UI improvements.

--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -20,3 +20,9 @@ html {
 nav {
   background-color: #3f51b5;
 }
+
+.bold-separator {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
