--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -25,14 +25,21 @@
               [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-white" [routerLink]="['/']">Home</a>
           </li>
+          <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/advanced-search']">Advanced search</a>
           </li>
+          <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/simple-search']">Simple search</a>
           </li>
+          <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/fetch-data']">Fetch data</a>
+          </li>
+          <li class="bold-separator"><a class="nav-link text-white">|</a></li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-white" [routerLink]="['/combination-search']">Combination search</a>
           </li>
         </ul>
       </div>
