--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
@@ -4,11 +4,17 @@
   <mat-form-field id="search-width">
     <input matInput
            placeholder="Search"
-           [formControl]="searchQuery"/>
+           [formControl]="searchQuery" />
   </mat-form-field>
   <button mat-raised-button color="primary">
     Search
   </button>
+  <button mat-icon-button color="warn" if="subscribe-button" (click)="subscribeQuery()">
+    <mat-icon svgIcon="thumbs-up" color="warn" aria-hidden="false"></mat-icon>
+  </button>
+  <!--<button if="subscribe-button" mat-icon-button color="accent" aria-label="Example icon-button" (click)="subscribeQuery()">
+    <mat-icon svgIcon="thumbs-up" color="accent" aria-hidden="false" aria-label="Example thumbs up SVG icon"></mat-icon>
+  </button>-->
 </form>
 
 <div class="example-container mat-elevation-z8">
@@ -32,7 +38,7 @@
     <ng-container matColumnDef="tags">
       <th mat-header-cell *matHeaderCellDef> Tags </th>
       <td mat-cell *matCellDef="let element">
-        <mat-form-field >
+        <mat-form-field>
           <mat-chip-list aria-label="Color selection">
             <mat-chip *ngFor="let tag of element.tags" [color]="chipColor(tag.type)" [routerLink]="['/advanced-search/tag/', tag.name]" selected="true">
               {{tag.name}}
