--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
@@ -18,7 +18,7 @@
 
   <button mat-raised-button color="primary"
       matBadge="8" matBadgePosition="before" matBadgeColor="accent">
-    Sample text
+    Button with badge
   </button>
 
   <ng-container *ngIf="dataSource && indexFreqEnabled">
@@ -29,40 +29,45 @@
         <mat-card-title>Broader concepts</mat-card-title>
         <mat-card-subtitle>Concepts more general than your query</mat-card-subtitle>
         <ng-container>
-          <!-- <mat-chip-list>
-            <mat-chip *ngFor="let item of broaderConceptsFreq" [routerLink]="['/simple-search/', concept]" selected="true">
-              {{ item }}
-            </mat-chip>
-          </mat-chip-list> -->
           <mat-chip-list>
-            <mat-chip *ngFor="let item of broaderConceptsFreq | keyvalue" [routerLink]="['/simple-search/', concept]" selected="true">
+             <!-- hack with click because version with routreLink won't work -->
+            <mat-chip *ngFor="let item of broaderConceptsFreq | keyvalue " (click)="newSearch($event, item.key)" selected="true">
+            <!-- <mat-chip *ngFor="let item of broaderConceptsFreq | keyvalue " [routerLink]="['/simple-search/', item.key]" selected="true"> -->
+            <!-- <mat-chip *ngFor="let item of sortBy(broaderConceptsFreq) " [routerLink]="['/simple-search/', concept]" selected="true"> -->
               {{ item.key }} | {{ item.value }}
             </mat-chip>
           </mat-chip-list>
         </ng-container>
       </mat-card>
-      <!-- <mat-card>
+      
+      <mat-card>
         <mat-card-title>Narrower concepts</mat-card-title>
         <mat-card-subtitle>Concepts more specific than your query</mat-card-subtitle>
         <ng-container>
           <mat-chip-list>
-            <mat-chip *ngFor="let concept of narowerConcepts" [routerLink]="['/simple-search/', concept]" selected="true">
-              {{ concept }}
+            <!-- <mat-chip *ngFor="let item of narrowerConceptsFreq | keyvalue " [routerLink]="['/simple-search/', item.key]" selected="true"> -->
+              <!-- hack with click because version with routreLink won't work -->
+              <mat-chip *ngFor="let item of narrowerConceptsFreq | keyvalue " (click)="newSearch($event, item.key)" selected="true">
+              {{ item.key }} | {{ item.value }}
             </mat-chip>
           </mat-chip-list>
         </ng-container>
       </mat-card>
+
       <mat-card>
         <mat-card-title>Related concepts</mat-card-title>
         <mat-card-subtitle>Other concepts related with subject of your query</mat-card-subtitle>
         <ng-container>
           <mat-chip-list>
-            <mat-chip *ngFor="let concept of relatedConcepts" [routerLink]="['/simple-search/', concept]" selected="true">
-              {{ concept }}
+            <!-- <mat-chip *ngFor="let item of relatedConceptsFreq | keyvalue " [routerLink]="['/simple-search/', item.key]" selected="true"> -->
+            <!-- hack with click because version with routreLink won't work -->
+            <mat-chip *ngFor="let item of relatedConceptsFreq | keyvalue " (click)="newSearch($event, item.key)" selected="true">
+              {{ item.key }} | {{ item.value }}
             </mat-chip>
           </mat-chip-list>
         </ng-container>
-      </mat-card> -->
+      </mat-card>
+ 
     </mat-card>
   </ng-container>
 
