Minor change after merge

--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
@@ -21,8 +21,10 @@
 
   <ng-container *ngIf="dataSource && indexFreqEnabled">
     <mat-card>
-      <mat-card-title>Semantic search</mat-card-title>
-      <mat-card-subtitle>No clue about matching keyword? Make searching easier with semantic serach. </mat-card-subtitle>
+      <mat-card-header>
+        <mat-card-title>Semantic search</mat-card-title>
+        <mat-card-subtitle>No clue about matching keyword? Make searching easier with semantic serach. </mat-card-subtitle>
+      </mat-card-header>
       <mat-card>
         <mat-card-title>Broader concepts</mat-card-title>
         <mat-card-subtitle>Concepts more general than your query</mat-card-subtitle>
