--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.css
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.css
@@ -52,3 +52,71 @@ table {
   overflow: hidden;
   white-space: nowrap;
 }
+
+section {
+  display: table;
+  margin: 8px;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  /* width: 120px; */
+}
+
+.example-button-row {
+  display: table-cell;
+}
+
+.example-button-row button {
+  display: table-cell;
+  margin-right: 15px;
+  margin-bottom: 8px;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  /* width: 480px; */
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  /* width: 120px; */
+}
+/* .mat-badge-content {
+width: auto;
+display: grid;
+min-width: 24px;
+min-height: 20px;
+text-align: center;
+align-items: center;
+padding: 4px 2px;
+font-size:10px;
+top: -20px;
+right: -22px;
+background-color : rgb(161, 17, 84);
+} */
+
+.mat-badge-content {
+  width: auto;
+  display: grid;
+  min-width: 32px;
+  min-height: 28px;
+  text-align: center;
+  align-items: center;
+  padding: 5px 3px;
+  top: -20px;
+  right: -22px;
+  }
+
+.mat-raised-button-sem {
+ background-color : steelblue;
+ width: auto;
+}
+
+.md-button {
+    border-radius: 50%;
+}
