--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -33,14 +33,14 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/simple-search']">Simple search</a>
           </li>
-          <!--<li class="bold-separator"><a class="nav-link text-white">|</a></li>
+          <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white" [routerLink]="['/combination-search']">Combination search</a>
-          </li>-->
+          </li>
         </ul>
       </div>
     </div>
