--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/advanced-search/advanced-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/advanced-search/advanced-search.component.html
@@ -40,11 +40,12 @@
       <td mat-cell *matCellDef="let element">
         <mat-form-field >
           <mat-chip-list aria-label="Color selection">
-            <mat-chip *ngFor="let tag of element.tags" [color]="chipColor(tag.type)" [routerLink]="['/advanced-search/tag/', tag.name]" selected="true">
+            <mat-chip *ngFor="let tag of element.tags" [color]="chipColor(tag.type)" [routerLink]="['/combination-search/tag/', tag.name]" selected="true">
               {{tag.name}}
             </mat-chip>
           </mat-chip-list>
         </mat-form-field>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
