--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
@@ -6,7 +6,7 @@
   <mat-card-content>
     <mat-form-field class="tags">
       <mat-chip-list>
-        <mat-chip *ngFor="let tag of news.tags" [color]="chipColor(tag.type)"  [routerLink]="['/advanced-search/tag/', tag.name]" selected>
+        <mat-chip *ngFor="let tag of news.tags" [color]="chipColor(tag.type)"  [routerLink]="['/combination-search/tag/', tag.name]" selected>
           {{tag.name}}
         </mat-chip>
       </mat-chip-list>
