--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.html
@@ -7,6 +7,9 @@
   <button mat-raised-button color="primary">
     Search
   </button>
+  <!--<button mat-icon-button color="primary" id="subscribe-button" (click)="openSubscribeDialog()">
+    <mat-icon svgIcon="subscriptions" color="warn" aria-hidden="false"></mat-icon>
+  </button>-->
 </form>
 
   <ng-container *ngIf="dataSource && indexFreqEnabled">
@@ -128,7 +131,7 @@
         <td mat-cell *matCellDef="let element">
           <mat-form-field>
             <mat-chip-list aria-label="Color selection">
-              <mat-chip *ngFor="let tag of element.tags" [color]="chipColor(tag.type)" [routerLink]="['/advanced-search/tag/', tag.name]" selected="true">
+              <mat-chip *ngFor="let tag of element.tags" [color]="chipColor(tag.type)" [routerLink]="['/combination-search/tag/', tag.name]" selected="true">
                 {{tag.name}}
               </mat-chip>
             </mat-chip-list>
