--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/email-sub-dialog/email-sub-dialog.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/email-sub-dialog/email-sub-dialog.component.html
@@ -7,8 +7,8 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <!--<button mat-icon-button [disabled]="!email.valid" mat-button mat-raised-button cdkFocusInitial color="primary" (click)="subscribeQuery()">
-    <mat-icon svgIcon="sendSub"></mat-icon>
-  </button>-->
+  <button mat-icon-button [disabled]="!email.valid" mat-button mat-raised-button cdkFocusInitial color="primary" (click)="subscribeQuery()">
+    <mat-icon svgIcon="sendSub" color="theme"></mat-icon>
+  </button>
   <button mat-button mat-raised-button (click)="cancelDialog()">Cancel</button>
 </div>
