--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/news-details/news-details.component.html
@@ -1,12 +1,12 @@
-<mat-card class="details-card">
+<!--<mat-card id="details-card">
   <mat-card-header>
     <mat-card-title>{{news.title}}</mat-card-title>
     <mat-card-subtitle>{{news.author}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-form-field class="tags">
+    <mat-form-field id="tags">
       <mat-chip-list>
-        <mat-chip *ngFor="let tag of news.tags" [color]="chipColor(tag.type)"  [routerLink]="['/combination-search/tag/', tag.name]" selected>
+        <mat-chip *ngFor="let tag of news.tags" [color]="chipColor(tag.type)" [routerLink]="['/combination-search/tag/', tag.name]" selected>
           {{tag.name}}
         </mat-chip>
       </mat-chip-list>
@@ -14,9 +14,44 @@
   </mat-card-content>
   <img mat-card-image src="{{news.imageUrl}}">
   <mat-card-content>
-    <p>
+    <p id="content">
       {{news.text}}
     </p>
   </mat-card-content>
   <a href={{news.url}}>{{news.url}}</a>
-</mat-card>
+</mat-card>-->
+<h3>{{news.title}}</h3>
+<mat-grid-list cols="3" rowHeight="500px">
+  <mat-grid-tile [colspan]="2"
+                 [rowspan]="1">
+    <mat-card class="center" style="width: 100%; height: 100%;">
+      <img mat-card-image src="{{news.imageUrl}}">
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="1"
+                 [rowspan]="1">
+    <mat-card style="width: 100%; height: 100%;">
+      <mat-form-field id="tags">
+        <mat-chip-list>
+          <mat-chip *ngFor="let tag of news.tags" [color]="chipColor(tag.type)" [routerLink]="['/combination-search/tag/', tag.name]" selected>
+            {{tag.name}}
+          </mat-chip>
+        </mat-chip-list>
+      </mat-form-field>
+      <mat-list>
+        <mat-list-item>{{news.author}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><a href={{news.url}}> {{news.url}}</a></mat-list-item>
+        <mat-divider></mat-divider>
+      </mat-list>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="3"
+                 [rowspan]="1">
+    <mat-card style="width: 100%; height: 100%;">
+      <div>
+        {{news.text}}
+      </div>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
