--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,7 +29,7 @@
           </li>
           <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-white" [routerLink]="['/fetch-data']">Fetch data</a>
+            <a class="nav-link text-white" [routerLink]="['/fetch-data']">Add data</a>
           </li>
         </ul>
       </div>
