Corrections after showing

--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title id="title">Add new news</h1>
+<h1 mat-dialog-title id="titleSite">Add new news</h1>
 <form [formGroup]="form" (ngSubmit)="addNews()">
   <mat-form-field class="fields">
     <input placeholder="Title" id="title" name="titleField" type="text" formControlName="title"
