--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -25,7 +25,7 @@
           </li>
           <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-white" [routerLink]="['/combination-search']">Combination search</a>
+            <a class="nav-link text-white" [routerLink]="['/combination-search']">Advanced search</a>
           </li>
           <li class="bold-separator"><a class="nav-link text-white">|</a></li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
