--- a/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.css
+++ b/NewsBrowser/NewsBrowser/ClientApp/src/app/simple-search/simple-search.component.css
@@ -43,8 +43,9 @@ table {
   font-size: 16px;
 }
 
-#subscribe-button{
-    padding-left:10px;
+#subscribe-button {
+  padding-left: 10px;
+  padding-bottom: 10px;
 }
 
 .text-oneline {
